--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -66,15 +66,23 @@ section.content {
   opacity: 0;
 }
 
-.links { padding: 40px 0; }
+.links {
+  padding: 40px 0;
+  max-width: 320px;
+  margin: 0 auto;
+}
 
 .button--green {
-  display: inline-block;
+  margin: 10px 5px;
+  display: block;
   border-radius: 4px;
   border: 1px solid #3b8070;
   color: #3b8070;
   text-decoration: none;
   padding: 10px 30px;
+  width: 100%;
+  max-width: 320px;
+  text-align: center;
 }
 
 .button--green:hover {
@@ -99,9 +107,22 @@ section.content {
 
 input[type='text'],
 input[type='number'] {
+  width: 100%;
   padding: 10px;
   border: 1px solid #000;
   border-radius: 3px;
 }
+
+form {
+  max-width: 320px;
+  margin: 0 auto;
+  .row { margin-top: 20px; }
+  label {
+    margin-bottom: 5px;
+    text-align: left;
+  }
+}
+
+label { display: block; }
 
 @import 'partials/cards';
