--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -3,14 +3,30 @@
 p.card-balance { margin-top: 5px; }
 
 .card-item {
+  position: relative;
   display: inline-block;
   vertical-align: top;
   width: 33.333333%;
+  button {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+  }
+  &.selected {
+    .card-item__inner {
+      border: 1px solid green;
+      background: rgba(39, 318, 4, .1);
+      &:hover { border-color: green; }
+    }
+  }
+  .card-item__inner {
+    &:hover { border-color: #000; }
+  }
 }
 
 .card-item__inner {
   display: block;
-  margin: 0 10px;
+  margin: 10px;
   border: 1px solid #000;
   padding: 20px;
   text-decoration: none;
@@ -18,4 +34,38 @@ p.card-balance { margin-top: 5px; }
   text-align: left;
   transition: border-color .3s;
   &:hover { border-color: red; }
+}
+
+.cards-list {
+  margin-top: 40px;
+  text-align: left;
+}
+
+.remove-card {
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  font-size: 22px;
+  z-index: 100;
+}
+
+.card-container {
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 40px 0 0;
+  width: 50%;
+  .card-item {
+    width: 100%;
+  }
+}
+
+.send-balance-container {
+  width: 50%;
+  display: inline-block;
+  vertical-align: top;
+  .card-item {
+    margin: 10px 0;
+    width: 100%;
+    .card-item__inner { margin: 0; }
+  }
 }
